<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">晋在掌上</string>
    <string name="version">2.0.4</string>
    <string name="package_name">com.xinhuanews.sheng</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="back">返回</string>
    <string name="loadingdialog_title">正在加载&#8230;</string>
    <string name="loading_data_fail">失败了，点我重新加载</string>
    <string name="request_timeout">亲！网络不给力哦&#8230;</string>
    <string name="nologin">亲！还没有登录哦</string>
    <string name="developing">该功能暂未开放</string>
    <string name="parentdialog_title">温馨提示</string>
    <string name="choice">请选择</string>
    <string name="wait">请稍候</string>
    <string name="search">搜索</string>
    <string name="input">请输入</string>
    <string name="exit">退出本应用吗？</string>
    
    <!-- 引导页 -->
    <string name="guide_begin">开启精彩</string>
    <string name="guide_dialog">跳过用户引导？</string>
    
    <!-- rightmenu -->
    <string name="weather_separator">&#160;~&#160;</string>
    <string name="weather_temperature">℃</string>
    <string name="weather_power">级</string>
    
    <!-- path -->
    <string name="path_expand">展开</string>
    <string name="path_collapse">收起</string>

    <string name="leftmenu_login">点击登录</string>
    
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    
    <string name="column_edit_info_del">点击删除</string>
    <string name="column_edit_info_add">点击添加</string>
    <string name="removeItem">删除</string> 
    
    <!-- login -->
    <string name="login">登录</string>
    <string name="login_info">请填写您的基本信息</string>
	<string name="account">输入用户名</string>
	<string name="empty_password">输入密码</string>
    <string name="register_password">密　码：</string>
    <string name="save_password">记住密码</string>
    <string name="register">注册用户</string>
    <string name="star">*</string>
    <string name="password_again">密码确认</string>
    <string name="password_error">两次密码输入不一致</string>
    <string name="realname">真实姓名</string>
    <string name="email">邮箱</string>
    <string name="cellphone">联系电话</string>
    <string name="job">工作单位</string>
    <string name="position">职位</string>
    <string name="idcard">身份证</string>
    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="login_success">登录成功</string>
    <string name="register_default">切换普通注册</string>
    <string name="register_realname">切换实名注册</string>
    
    <string name="logout">注销</string>
    <string name="logout_info">亲，要注销当前用户吗？</string>
    
    <!-- 首页 -->
    <string name="homepage_listview_title">要闻</string>
    <string name="homepage_listview_more">更多</string>
    
    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="setting_netaddress_title">设置网络地址</string>
    <string name="setting_netaddress_default">默认地址</string>
    <string name="setting_netaddress_ip">IP地址</string>
    <string name="setting_netaddress_port">端口</string>
    <string name="setting_netaddress_colon">:</string>

    <!-- 发送邮件 -->
    <string name="send_email_hint">我要说&#8230;</string>
    
    <!-- 评论 -->
    <string name="comment_see">查看评论</string>
    <string name="comment_reply">回复</string>
    <string name="comment_at">&#160;&#064;</string>
    <string name="comment_send">发送</string>
    
    <!-- 有话要说 -->
    <string name="say_type_report">举报</string>
    <string name="say_type_suggest">建议</string>
    <string name="say_type_share">分享</string>
    <string name="say_type_praise">表扬</string>
    <string name="say_target_hint">对谁说</string>
    <!-- <string name="say_content_hint">请输入您要说的内容，为便于与您联系，请务必留下联系方式&#8230;</string> -->
    <string name="say_content_error">我要说的内容</string>
    <string name="say_attachment_select_hint">点击右侧选择图片</string>
    <string name="say_attachment_select">选图或拍照</string>
    <string name="say_content_confirm" >发送</string>
    <string name="sgv_mylocation">您的位置:</string>
    <string name="say_content_upload" >发布</string>
    <string-array name="setting_list">
        <item>清除缓存</item>
        <item>注销账户</item>
    </string-array>
    
    <!-- 版本检测 -->
    <string name="update_checking">正在检测&#8230;</string>
    <string name="update_download">正在下载&#8230;</string>
    <string name="update_finish">下载完成，确定安装更新？</string>
    <string name="update_download_error">下载出错，退出更新？</string>
    <string name="update_getinfo_error">已是最新版本</string>
    <string name="update_latest">已是最新版本</string>
    
    <!-- 关于 -->
    <string name="about">关于</string>
    <string name="about_checkversion">版本检测</string>
    <string name="about_copyright">Copyright©2014 新华社山西分社 版权所有</string>
    <string name="about_company">北京博微志远信息技术有限公司技术支持</string>
    <string name="say_publish_result_content">您的留言已经发表成功，正在处理中，请您稍等几分钟，不要重复发言！
\n5秒钟后自动返回。</string>
    <string name="say_publish_content">请在下方出入你想说的话</string>
    <string name="about_feedback_TextView">意见反馈</string>
    <string name="about_feedback_Button">提交</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="first_news_more">更多＞</string>
    <string name="first_news_text">中国网事</string>
   
    <string name="sheng">省</string>
    <string name="shi">市</string>
    <string name="xian">县/区</string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="immediately_register">马上注册</string>
    <string name="common_register">普通注册</string>
    <string name="real_register">实名注册</string>
    <string name="register_username">用户名：</string>
    <string name="register_prompt">*[必填]</string>
    <string name="again_password">再次输入：</string>
    <string name="register_real_name">姓　名：</string>
    <string name="register_phonenumber">手机号：</string>
    <string name="register_email">邮　箱：</string>
    <string name="register_sex">性　别：</string>
    <string name="register_district">地　区：</string>
    <string name="register_job">工作单位：</string>
    <string name="register_workspace">所在部门：</string>
    <string name="register_personal_number">身份证号：</string>
    
    
    
</resources>
