<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.xinhua.xinhuashe.view.NewFontsEditText
            android:id="@id/setting_netaddress_ip_EditText"
            android:layout_width="0dp"
            android:layout_height="38.0dip"
            android:layout_weight="2"
            android:background="@drawable/input_bg"
            android:gravity="center_vertical"
            android:hint="@string/setting_netaddress_ip"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:paddingRight="12.0dip"
            android:singleLine="true"
            android:textColor="#ff1d1d1d"
            android:textSize="13.0sp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/setting_netaddress_colon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.xinhua.xinhuashe.view.NewFontsEditText
            android:id="@id/setting_netaddress_port_EditText"
            android:layout_width="0dp"
            android:layout_height="38.0dip"
            android:layout_weight="1"
            android:background="@drawable/input_bg"
            android:gravity="center_vertical"
            android:hint="@string/setting_netaddress_port"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:paddingRight="12.0dip"
            android:singleLine="true"
            android:textColor="#ff1d1d1d"
            android:textSize="13.0sp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <CheckBox
        android:id="@id/setting_netaddress_default_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="28.0dip"
        android:layout_gravity="center_vertical"
        android:background="@null"
        android:button="@null"
        android:checked="false"
        android:drawableLeft="@drawable/checkbox_bg_selector"
        android:drawablePadding="4.0dip"
        android:text="@string/setting_netaddress_default"
        android:textColor="@android:color/black"
        android:textSize="12.0sp" />

</LinearLayout>