<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/parent_dialog_bg"
    android:minWidth="280dip"
    android:orientation="vertical" 
    android:layout_gravity="center_vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="@color/black"
        android:text="@string/logout"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />
    
    <TextView
        android:layout_width="280dp"
        android:layout_height="40.0dip"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="12.0dip"
        android:paddingRight="12.0dip"
        android:singleLine="true"
        android:text="@string/logout_info"
        android:textColor="@color/black"
        android:textSize="14.0sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@id/parentdialog_cancel_Button"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_bg_selector"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@id/parentdialog_confirm_Button"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_bg_selector"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>