<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/parent_dialog_bg"
    android:minWidth="280dip"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/say_target_hint"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <com.xinhua.xinhuashe.view.MaxHeightFrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@id/say_target_loading_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/loadingdialog_title"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <include layout="@layout/general_listview" />
    </com.xinhua.xinhuashe.view.MaxHeightFrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@id/parentdialog_cancel_Button"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_bg_selector"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@id/parentdialog_confirm_Button"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_bg_selector"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>