<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/gray"
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:layout_marginRight="20dip"
        >
        <ImageView 
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_gravity="center_vertical"
            android:src="@drawable/login_username"
            />
        <EditText
            android:id="@+id/login_username" 
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/login_username"
            />
    </LinearLayout>
    <View 
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:layout_marginTop="5dip"
	        android:layout_marginLeft="40dip"
	        android:layout_marginRight="20dip"
	        android:background="@color/gray"
	        />
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="10dip"
        android:background="@color/white"
        >
        <ImageView 
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_gravity="center_vertical"
            android:src="@drawable/login_password"
            />
        <EditText
            android:id="@+id/login_password" 
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:background="@color/transparent"
            android:hint="@string/login_password"
            />
    </LinearLayout>
    </LinearLayout>
	<View 
	        android:layout_width="fill_parent"
	        android:layout_height="7dp"
	        android:layout_marginTop="5dip"
	        android:background="@color/gray"
	        />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@color/white"
	    >
	<RelativeLayout 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
	    >
	    <TextView
	        android:id="@+id/forget_password_textView" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:text="@string/forget_password"
	        android:textSize="18sp"
	        android:paddingLeft="20dip"
	        android:textColor="#C9C9C9"
	        />

	    <TextView
	        android:id="@+id/immediately_register_textView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="@string/immediately_register"
	        android:textColor="#C9C9C9"
	        android:paddingRight="20dip"
	        android:textSize="18sp" />
	    
	</RelativeLayout>
	<Button
	    android:id="@+id/login_logining_Button" 
	    android:layout_width="160dip"
	    android:layout_height="40dip"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="20dip"
	    android:layout_marginBottom="20dip"
	    android:text="@string/login"
	    android:background="@color/gray"
	    android:textColor="#257BB8"
	    android:textSize="20sp"
	    />
	</LinearLayout>
</LinearLayout>
