<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <RadioGroup
        android:id="@id/say_type_RadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <!--
        <RadioButton
            android:id="@id/say_type_report_RadioButton"
            style="@style/login_tab"
            android:background="@null"
            android:drawableLeft="@drawable/radiobutton"
            android:drawablePadding="6dp"
            android:gravity="left|center_vertical"
            android:text="@string/say_type_report"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <RadioButton
            android:id="@id/say_type_suggest_RadioButton"
            style="@style/login_tab"
            android:background="@null"
            android:drawableLeft="@drawable/radiobutton"
            android:drawablePadding="6dp"
            android:gravity="left|center_vertical"
            android:text="@string/say_type_suggest"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <RadioButton
            android:id="@id/say_type_share_RadioButton"
            style="@style/login_tab"
            android:background="@null"
            android:drawableLeft="@drawable/radiobutton"
            android:drawablePadding="6dp"
            android:gravity="left|center_vertical"
            android:text="@string/say_type_share"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <RadioButton
            android:id="@id/say_type_praise_RadioButton"
            style="@style/login_tab"
            android:background="@null"
            android:drawableLeft="@drawable/radiobutton"
            android:drawablePadding="6dp"
            android:gravity="left|center_vertical"
            android:text="@string/say_type_praise"
            android:textColor="@color/black"
            android:textSize="13sp" />
        -->
    </RadioGroup>

    <TextView
        android:id="@id/say_target_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="6dp"
        android:drawableRight="@drawable/header_spinner"
        android:gravity="center_vertical"
        android:hint="@string/say_target_hint"
        android:textColor="@color/text_main"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="7dp"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:text="@string/say_publish_content"
        android:textColor="@color/text_main"
        android:textSize="16sp" />

    <EditText
        android:id="@id/say_content_EditText"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/news_detail_edit_bg"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/say_attachment_select_TextView"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="3"
            android:background="@drawable/news_detail_edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/say_attachment_select_hint"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@id/say_attachment_select_Button"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/say_attachment_select"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@style/update_progressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <!--
         <TextView
        android:id="@+id/uploadImageResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_main" />
    -->

    <Button
        android:id="@+id/uploadImage"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/say_content_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>