<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="none"
    android:fadingEdgeLength="0dp"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="60dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="matrix"
            android:src="@drawable/notification" />

        <com.xinhua.xinhuashe.view.NewFontsTextView
            android:id="@id/about_title_TextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_main"
            android:textSize="18sp" />

        <TextView
            android:id="@id/about_version_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/version"
            android:textColor="@color/text_gray"
            android:textSize="12sp" />

        <RelativeLayout 
            android:id="@+id/about_version_update"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_bg"
            android:layout_marginTop="100dp"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="版本更新"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/base_list_more_icon"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/about_introduce"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/layout_bg"
            android:visibility="gone"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="功能介绍"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/base_list_more_icon"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/about_guide"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/layout_bg"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="新手引导"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/base_list_more_icon"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <TextView
            android:id="@id/about_copyright_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/about_copyright"
            android:textColor="@color/text_main"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/about_company"
            android:textColor="@color/text_main"
            android:textSize="12sp" />
    </LinearLayout>

</ScrollView>